force-app/main/default/objects/Digi_Brief_Email_Recipient__c/Digi_Brief_Email_Recipient__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Default email recipient of the Digital Brief PDF</description>
    <label>Digital Brief Email Recipient</label>
</CustomObject>