force-app/main/default/objects/Digi_Brief_Email_Recipient__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Separate emails using (,) comma.</description>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>