force-app/main/default/objects/Digi_Brief_Email_Recipient__c/fields/Enable_Send_PDF_Feature__c.field-meta.xml
<CustomField>
    <fullName>Enable_Send_PDF_Feature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Send PDF Feature</label>
    <type>Checkbox</type>
</CustomField>