force-app/main/default/objects/Digi_Brief_Email_Recipient__c/fields/HAM_Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>HAM_Email_Domain__c</fullName>
    <defaultValue>&apos;@hamilton.edu&apos;</defaultValue>
    <label>HAM Email Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>