force-app/main/default/objects/Digi_Brief_Email_Recipient__c/fields/Restrict_to_Hamilton_Email__c.field-meta.xml
<CustomField>
    <fullName>Restrict_to_Hamilton_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Restrict to Hamilton Email</label>
    <type>Checkbox</type>
</CustomField>